# 1mZGG

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CommCamera.h  CommDisplay.cpp  CommDisplay.h  DSS_QT.pro  DefinedMacro.h  DeviceManager.h  Doxyfile.in  GlobalParameter.cpp  GlobalParameter.h  Grabber.cpp  Grabber.h  ImageCode.cpp  ImageCode.h  ImageProcAlgo.cpp  ImageProcAlgo.h  ImageProcessor.cpp  ImageProcessor.h  ImageReplayer.cpp  ImageReplayer.h  ImageStorage.h  KernelCL.cl  Labeler.cpp  MainWindow.qrc  MyLog.cpp  MyLog.h  NetApp.cpp  NetApp.h  NetErrorDiagnose.cpp  NetErrorDiagnose.h  Pos_USB-COM  QImage8UC1BufferPackage.cpp  QImage8UC1BufferPackage.h  (+28 more)
.github/workflows/: ci.yml
benchmarks/: processing_benchmark.cpp
cmake/: DssQtDeploy.cmake  DssTargetDefaults.cmake  DssTooling.cmake  RunClangFormat.cmake  RunClangTidy.cmake
config/: SystemInit.ini  SystemInit.json
docs/: hardware-validation.md  legacy-capability-map.md  legacy-modern-migration-note.md  migration-status.md  module-acquisition.md  module-app.md  module-comm.md  module-core.md  module-gpu.md  module-network.md  module-processing.md  module-storage.md  module-tracking.md  module-ui.md  overview.md
docs/superpowers/plans/: 2026-06-17-viewmodel-modularization-phase1.md  2026-06-19-production-ui-phase1-2.md  2026-06-19-ui-storage-logging-production.md  2026-06-20-follow-up-refactoring-roadmap.md
docs/superpowers/specs/: 2026-06-17-viewmodel-modularization-design.md  2026-06-19-production-ui-phase1-2-design.md  2026-06-19-ui-storage-logging-production-design.md
include/dss/acquisition/: camera_control_protocol.h  frame_source_coordinator.h  i_camera_controller.h  i_frame_source.h  image_sequence_frame_source.h  sapera_frame_source.h  serial_camera_controller.h
include/dss/app/: application_context.h  observation_session.h  runtime_diagnostics.h  track_result_data_exchange_bridge.h
include/dss/comm/: display_channel.h  exposure_channel.h  frame_codec.h  i_serial_channel.h  (+5 more)
kernels/: arithmetic.cu  calibration.cu  composite.cu  filter.cu  statistics.cu  transform.cu
oldsrc/: CommCamera.cpp  CommExposure.cpp  CommExposure.h  CommMasterControl.cpp  CommMasterControl.h  CommServo.cpp  CommServo.h  DeviceManager.cpp  ENetServer.h  GlobalParameter.cpp  GlobalParameter.h  Grabber.cpp  ImageCode.cpp  ImageCode.h  ImageProcAlgo.cpp  ImageProcAlgo.h  ImageProcessor.cpp  ImageReplayer.cpp  ImageStorage.cpp  KernelCL.cl  Labeler.h  MainWindow.qrc  NetAtmos.cpp  NetAtmos.h  NetExchange.cpp  NetExchange.h  NetImageSender.cpp  NetImageSender.h  README.md  StandardThread.h  TrackAlgo.cpp  TrackDataStorage.cpp  TrackDataStorage.h  UI_CtrlPad.cpp  UI_CtrlPad.ui  UI_DispPad.cpp  UI_DispPad.ui  UI_DispPadS.cpp  UI_DistCurve.cpp  eventBus17.hpp  (+5 more)
profiles/conan/: windows-clang-cl  windows-msvc
src/: main.cpp
src/acquisition/: frame_source_coordinator.cpp  image_sequence_frame_source.cpp  sapera_frame_source.cpp  serial_camera_controller.cpp
src/app/: application_context.cpp  communication_services.cpp  observation_session.cpp  runtime_diagnostics.cpp  track_result_data_exchange_bridge.cpp
src/comm/: display_channel.cpp  exposure_channel.cpp  master_control_channel.cpp  serial_worker_base.cpp  servo_channel.cpp
src/core/: config.cpp  logger.cpp  result_packet_utils.cpp  service_host.cpp
src/gpu/: cuda_device_manager.cpp
src/network/: atmos_receiver.cpp  data_exchange.cpp  error_diagnostics.cpp  heartbeat.cpp  image_sender.cpp  udp_channel.cpp
src/processing/: cuda_processing_strategy.cpp  diff_processing_strategy.cpp  display_stretch.cpp  image_processor.cpp  labeler.cpp  opencv_processing_strategy.cpp  processing_pipeline.cpp
src/storage/: bmp_image_format.cpp
src/tracking/: candidate_utils.cpp  geo_association.cpp  geo_continuous_tracking.cpp  geo_tracker.cpp  geo_tracking_detail.h  geo_validation.cpp  leo_tracker.cpp  lifecycle_utils.cpp  manual_tracker.cpp  math_utils.cpp  prediction_utils.cpp  sc_tracker.cpp  track_manager.cpp
src/ui/: app_event.cpp  data_exchange_view_model.cpp  display_view_model.cpp  gpu_image_display.cpp  image_display.cpp  image_display_crop.cpp  init_dialog.cpp  log_palette.cpp  log_view_model.cpp  main_view_model.cpp  main_window.cpp  main_window_comm_page.cpp  main_window_control_page.cpp  main_window_display_page.cpp  main_window_log_settings_pages.cpp  network_endpoint_helpers.cpp  network_endpoints_panel.cpp  network_view_model.cpp  processing_view_model.cpp  replay_view_model.cpp  serial_channels_panel.cpp  serial_commands_panel.cpp  serial_port_view_model.cpp  settings_view_model.cpp  storage_view_model.cpp  tracking_view_model.cpp  view_model.cpp  wheel_guarded_spin_box.cpp
tests/: CMakeLists.txt  test_application_context_services.cpp  test_bmp_image_format.cpp  test_bounded_channel.cpp  test_camera_control_protocol.cpp  test_config.cpp  test_cuda_processing_contract.cpp  test_data_exchange.cpp  test_data_exchange_protocol.cpp  test_data_exchange_view_model.cpp  test_diff_processing.cpp  test_display_stretch.cpp  test_display_view_model.cpp  test_error_diagnostics.cpp  test_event_bus_primitives_header.cpp  test_event_header.cpp  test_frame_codec.cpp  test_frame_source_coordinator.cpp  test_frame_view.cpp  test_geo_tracker.cpp  test_heartbeat.cpp  test_image_display.cpp  test_image_processor.cpp  test_image_sender.cpp  test_image_sequence_frame_source.cpp  test_image_storage_format.cpp  test_leo_tracker.cpp  test_local_image_storage_backend.cpp  test_log_palette.cpp  test_log_view_model.cpp  test_logger.cpp  test_main_view_model.cpp  test_main_window_layout.cpp  test_manual_tracker.cpp  test_math_utils.cpp  test_network_protocols.cpp  test_network_view_model.cpp  test_observation_session.cpp  test_opencv_processing.cpp  test_processing_pipeline.cpp  (+28 more)
tests/fixtures/tracking/: README.md  geo_hit_miss_rediscovery.json  leo_hit_miss_rediscovery.json  manual_hit_miss_rediscovery.json  sc_hit_miss_rediscovery.json
tests/include/: tracking_fixture_loader.h
tools/: sapera_smoke.cpp
(+78 files in other folders)
